coming soon message

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ img{
    }
 .content {
         width: 960px;
-        height: 540px;
+        height: 640px;
 
         position:absolute; /*it can be fixed too*/
         left:0; right:0;
@@ -22,6 +22,8 @@ img{
 </style>
 </head>
 <body>
-<div class="content"><img src="FrontCover.jpg"/></div>
+<div class="content"><img src="FrontCover.jpg"/><br/>
+    Starting January 2019 - Ab Januar 2019 - A partir de enero de 2019
+    </div>
 </body>
 </html>
