--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ img{
 </style>
 </head>
 <body>
-<div class="content"><img src="FrontCover.jpg"/><br/>
-    Starting January 2019 - Ab Januar 2019 - A partir de enero de 2019
+    <div class="content"><center><h2>Starting January 2019 - Ab Januar 2019 - A partir de enero de 2019</h2></center><br/><img src="FrontCover.jpg"/>
+    
     </div>
 </body>
 </html>
