--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ img{
 </style>
 </head>
 <body>
-    <div class="content"><center><h2>Starting January 2019 - Ab Januar 2019 - A partir de enero de 2019</h2></center><br/><img src="FrontCover.jpg"/>
+    <div class="content"><center><h2>Starting January 2019 - Ab Januar 2019 - A partir de enero de 2019</h2></center><br/><img src="https://lh3.googleusercontent.com/tV5I42jZuqJmswhJlDX3qNXfENeI5gYSm7r_I6MAXliZVOODIuchgszK37jBqHiypPEhz3H1vZdOJgE1KWebTQRpzVwUCIBRGPEEyqJZvoLqWhpXxonl-4OLZNe8Lcz-tJbaLDXuearok6oMi8CZy14b4KmuirjmS9UA5VANLI7cf-RaeZZ5rkcwP8cRpXjCYgBs6nbMTxaxSFBdlQthujGfWjSj0xyJ7dKvnrhTRHGwYNoSeQc2gbAoNuT_g9r3kN3Txi5lx-YlpshaClT4OAJ-TLTV94JjYu9k1sZU6AhYCqmCT94-GruyGmhe-Ne-u3G93hHC8tTGNENMrl3HpY9eZwrBJ4OBDViiWENukj3x4llaoHGp6mQYYBI5DGoC8z9TxaSr6rLAGHfrzBRjbLkbEIJgUILcPBSnCuz6kzFABSAT-tXgYfNwpu-QfQp1fl8SAluuubjtHGDqGniqZbgDhVislg4y67ua36IbrJ37ui-Spa_ULEaAdm0fjEs2e0oad3Pve1NdNMwIbc8BnH9u16pEuZZXDQt6hjqoVWPx5gzlWgaMgbWwZGefPFUctJBuK-ZHeo2VpVkuYBlP6yUG6D4pNw-4ETFaJmyHGPk_JD_UijOLjkn39ZEwbWzlKDZ7hTD2IxhCQ5Ezl0mpud3O=s0-rj"/>
     
     </div>
 </body>
